--- a/dao/src/main/resources/application.properties
+++ b/dao/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.data.mongodb.uri=mongodb://localhost/iflyer
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.database=jdjropinion
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=jdjropinion
+spring.data.mongodb.password=jdjropinion
